# im-cgmes

./: README.md  mkdocs.yaml  pyproject.toml
_docs/: ACDCConverterDCTerminal.md  ActivePowerLimit.md  ActivePowerPerCurrentFlow.md  ApparentPower.md  BaseVoltage.md  BasicIntervalSchedule.md  BatteryUnit.md  Bay.md  Breaker.md  BusbarSection.md  Conductance.md  ConductingEquipment.md  Connector.md  Currency.md  CurrentLimit.md  Curve.md  Cut.md  DCBaseTerminal.md  DCConductingEquipment.md  DCConverterOperatingModeKind.md  DCDisconnector.md  DCEquipmentContainer.md  DCLine.md  DCLineSegment.md  DCPolarityKind.md  DCShunt.md  DCTerminal.md  DisconnectingCircuitBreaker.md  Disconnector.md  EnergyConsumer.md  EnergySchedulingType.md  EnergySource.md  EquipmentContainer.md  EquivalentShunt.md  GeographicalRegion.md  GrossToNetActivePowerCurve.md  GroundingImpedance.md  HydroEnergyConversionKind.md  HydroGeneratingUnit.md  HydroPlantStorageKind.md  (+45 more)
_docs/452 &mdash; Diagram Layout/: DiagramLayoutProfile.md  DiagramObjectStyle.md  DiagramStyle.md  OrientationKind.md  UnitMultiplier.md  UnitSymbol.md  index.md
_docs/453 &mdash; Core Equipment/: ACDCConverter.md  ApparentPowerLimit.md  (+62 more)
_templates/: .class.md.jinja2.swp  class.md.jinja2  class_diagram.md.jinja2  enum.md.jinja2  index.md.jinja2
docs/: 404.html  index.html  sitemap.xml
schemas/: 453-core-equipment.yaml  core-equipment.yaml  diagram-layout.yaml  dynamics.yaml  equipment-boundary.yaml  geographical-location.yaml  operation.yaml  short-circuit.yaml  state-variables.yaml  steady-state-hypothesis.yaml  topology.yaml
(+1913 files in other folders)
